--- a/app/views/admin/formats/edit.html.erb
+++ b/app/views/admin/formats/edit.html.erb
@@ -1,12 +1,12 @@
-<h1>Editing license</h1>
+<h1>Editing format</h1>
 
 <%= render 'form' %>
 
 <br>
 
-<%= link_to(admin_license_url(@license)) do
+<%= link_to(admin_format_url(@format)) do
       '<span class="glyphicon glyphicon-search">View</span>'.html_safe
     end %>|
-<%= link_to(admin_licenses_url) do
+<%= link_to(admin_formats_url) do
       '<span class="glyphicon glyphicon-list">List</span>'.html_safe
     end %>
