--- a/app/views/admin/formats/show.html.erb
+++ b/app/views/admin/formats/show.html.erb
@@ -2,17 +2,17 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @language.name %>
+  <%= @format.name %>
 </p>
 
 <p>
   <strong>Description:</strong>
-  <%= @language.description %>
+  <%= @format.description %>
 </p>
 
-<%= link_to(edit_admin_language_url(@language)) do
+<%= link_to(edit_admin_format_url(@format)) do
       '<span class="glyphicon glyphicon-pencil">Edit</span>'.html_safe
     end %> |
-<%= link_to(admin_languages_url) do
+<%= link_to(admin_formats_url) do
       '<span class="glyphicon glyphicon-list">List</span>'.html_safe
     end %>
