--- a/app/views/admin/languages/edit.html.erb
+++ b/app/views/admin/languages/edit.html.erb
@@ -2,5 +2,11 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @language %> |
-<%= link_to 'Back', languages_path %>
+<br>
+
+<%= link_to(admin_language_url(@language)) do
+      '<span class="glyphicon glyphicon-search">View</span>'.html_safe
+    end %>|
+<%= link_to(admin_languages_url) do
+      '<span class="glyphicon glyphicon-list">List</span>'.html_safe
+    end %>
