--- a/app/views/admin/licenses/show.html.erb
+++ b/app/views/admin/licenses/show.html.erb
@@ -2,13 +2,37 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @language.name %>
+  <%= @license.name %>
 </p>
 
 <p>
-  <strong>Description:</strong>
-  <%= @language.description %>
+  <strong>Short Name:</strong>
+  <%= @license.short_name %>
 </p>
 
-<%= link_to 'Edit', edit_language_path(@language) %> |
-<%= link_to 'Back', languages_path %>
+<p>
+  <strong>URL:</strong>
+  <%= @license.url %>
+</p>
+
+<p>
+  <strong>Publishing Contract:</strong>
+  <%= @license.publishing_contract %>
+</p>
+
+<p>
+  <strong>Copyright Notice:</strong>
+  <%= @license.copyright_notice %>
+</p>
+
+<p>
+  <strong>Public Domain?</strong>
+  <%= yn(@license.is_public_domain) %>
+</p>
+
+<%= link_to(edit_admin_license_url(@license)) do
+      '<span class="glyphicon glyphicon-pencil">Edit</span>'.html_safe
+    end %> |
+<%= link_to(admin_licenses_url) do
+      '<span class="glyphicon glyphicon-list">List</span>'.html_safe
+    end %>
