--- a/app/views/admin/administrators/index.js.erb
+++ b/app/views/admin/administrators/index.js.erb
@@ -1,5 +1,5 @@
 <%= unless_errors alerts_html_id: 'dialog-local-alerts' do %>
   $("#search-results-list").html(
-    "<%= j(render(partial: 'admin/users/list',
+    "<%= j(render(partial: 'shared/users/search_results',
                   locals: {action_partial: 'admin/administrators/form'})) %>");
 <% end %>
