--- a/app/views/admin/formats/_form.html.erb
+++ b/app/views/admin/formats/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for([:admin, @language]) do |f| %>
-  <% if @language.errors.any? %>
+<%= form_for([:admin, @format]) do |f| %>
+  <% if @format.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@language.errors.count, "error") %> prohibited this language from being saved:</h2>
+      <h2><%= pluralize(@format.errors.count, "error") %> prohibited this format from being saved:</h2>
 
       <ul>
-      <% @language.errors.full_messages.each do |message| %>
+      <% @format.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
