--- a/app/views/admin/formats/new.html.erb
+++ b/app/views/admin/formats/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New license</h1>
+<h1>New format</h1>
 
 <%= render 'form' %>
 
 <br>
 
-<%= link_to(admin_licenses_url) do
+<%= link_to(admin_formats_url) do
       '<span class="glyphicon glyphicon-list">List</span>'.html_safe
     end %>
