--- a/app/views/admin/licenses/_form.html.erb
+++ b/app/views/admin/licenses/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@language) do |f| %>
-  <% if @language.errors.any? %>
+<%= form_for([:admin, @license]) do |f| %>
+  <% if @license.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@language.errors.count, "error") %> prohibited this language from being saved:</h2>
+      <h2><%= pluralize(@license.errors.count, "error") %> prohibited this license from being saved:</h2>
 
       <ul>
-      <% @language.errors.full_messages.each do |message| %>
+      <% @license.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -16,8 +16,24 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.label :short_name %><br>
+    <%= f.text_field :short_name %>
+  </div>
+  <div class="field">
+    <%= f.label :url %><br>
+    <%= f.text_field :url %>
+  </div>
+  <div class="field">
+    <%= f.label :publishing_contract %><br>
+    <%= f.text_area :publishing_contract %>
+  </div>
+  <div class="field">
+    <%= f.label :copyright_notice %><br>
+    <%= f.text_area :copyright_notice %>
+  </div>
+  <div class="field">
+    <%= f.label :is_public_domain %><br>
+    <%= f.check_box :is_public_domain %>
   </div>
   <div class="actions">
     <%= f.submit %>
