--- a/app/views/admin/licenses/index.html.erb
+++ b/app/views/admin/licenses/index.html.erb
@@ -1,27 +1,10 @@
-<h1>Listing languages</h1>
+<h1>Content Licenses</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @languages.each do |language| %>
-      <tr>
-        <td><%= language.name %></td>
-        <td><%= language.description %></td>
-        <td><%= link_to 'Show', language %></td>
-        <td><%= link_to 'Edit', edit_language_path(language) %></td>
-        <td><%= link_to 'Destroy', language, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render partial: 'index', locals: {licenses: @licenses,
+                                      action_partial: 'admin/licenses/actions'} %>
 
 <br>
 
-<%= link_to 'New Language', new_language_path %>
+<%= link_to(new_admin_license_url) do
+      '<span class="glyphicon glyphicon-plus">Add</span>'.html_safe
+    end %>
