--- a/app/views/admin/required_libraries/_destroy.html.erb
+++ b/app/views/admin/required_libraries/_destroy.html.erb
@@ -1,3 +1,3 @@
-<%= link_to(admin_required_library_url(required_library), method: :delete) do
+<%= link_to(admin_required_library_url(library.required_library), method: :delete) do
       '<span class="glyphicon glyphicon-arrow-down orange"></span>'.html_safe
     end %>
