--- a/app/views/admin/trusted_applications/_form.html.erb
+++ b/app/views/admin/trusted_applications/_form.html.erb
@@ -1,7 +1,7 @@
-<%= library.required_library ? \
-      render(partial: 'admin/required_libraries/destroy',
-             locals: {required_library: library.required_library}) : \
-      link_to(admin_required_libraries_url(
-        required_library: {library_id: library.id}), method: :post) do
+<%= application.trusted_application ? \
+      render(partial: 'admin/trusted_applications/destroy',
+             locals: {trusted_application: application.trusted_application}) : \
+      link_to(admin_trusted_applications_url(
+        trusted_application: {application_id: application.id}), method: :post) do
         '<span class="glyphicon glyphicon-arrow-up"></span>'.html_safe
       end %>
