--- a/app/views/admin/users/_index.html.erb
+++ b/app/views/admin/users/_index.html.erb
@@ -4,7 +4,7 @@
                      remote: true } %>
 
 <div id='search-results-list'>
-  <%= render partial: 'admin/users/list',
+  <%= render partial: 'shared/users/search_results',
              locals: {action_partial: 'admin/users/delete',
                       sign_in_as: true} %>
 </div>
