--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -58,3 +58,7 @@ select, input[type='text'], input[type='search'] {
 table td[class*="col-"], table th[class*="col-"] {
   text-align: center !important;
 }
+
+div .field_with_errors {
+  display: inline-block;
+}
