--- a/app/views/layouts/_application_bottom_nav.html.erb
+++ b/app/views/layouts/_application_bottom_nav.html.erb
@@ -3,7 +3,13 @@
 
     <div id="bottom-nav-links">
 
-      <%= link_to "Terms of Use", main_app.tou_path %>
+      <%= link_to "Terms of Use", main_app.terms_path %>
+      <%= image_tag "links_dash.png" %>
+
+      <%= link_to "Privacy Policy", main_app.privacy_path %>
+      <%= image_tag "links_dash.png" %>
+
+      <%= link_to "Publishing Agreement", main_app.publishing_path %>
       <%= image_tag "links_dash.png" %>
       
       <%= link_to "About", main_app.about_path %>
@@ -13,25 +19,6 @@
       <%= image_tag "links_dash.png" %>      
 
       <%= link_to "Contact Us", main_app.contact_path %>
-
-      <% if false %>
-      <% links = [ ["Terms of Use", nil],
-                   ["About", nil],
-                   ["Contact Us", nil] ] %>
-
-      <ul>
-      <% links.each_with_index do |link, ii| %>
-        <li>
-        <%= link_to link[1] do %>
-          <span class='bottom-nav-link'>
-            <%= link[0] %>
-            <%= content_tag :em if ii != links.size-1 %>
-          </span>
-        <% end %>
-        </li>
-      <% end %>
-      </ul>
-      <% end %>
 
     </div>
 
