--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,2 @@
-<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public 
-    License version 3 or later.  See the COPYRIGHT file for details. %>
-
-<%# top_nav_about_active            %>
-<%# top_nav_dashboard_active        %>
-<%# top_nav_course_catalog_active   %>
-<%# top_nav_current_classes_active  %>
-<%# top_nav_my_tutor_active         %>
-<%# top_nav_help_active             %>
+<h1>StaticPages#home</h1>
+<p>Find me in app/views/static_pages/home.html.erb</p>
