Updated to Rails 4.2

--- a/app/views/shared/_upper_corner_console.html.erb
+++ b/app/views/shared/_upper_corner_console.html.erb
@@ -1,4 +1,4 @@
-<div id="upper-corner-console">
+<div id="upper-corner-console" data-no-turbolink>
 
   <% if !Rails.env.production? %>
     Current user: <%= current_user.username %><br/>
