--- a/app/views/shared/users/_search_pagination.html.erb
+++ b/app/views/shared/users/_search_pagination.html.erb
@@ -1,7 +1,7 @@
 <%
-  page = @handler_result.outputs[:page]
-  num_users = @handler_result.outputs[:num_matching_accounts]
-  per_page = @handler_result.outputs[:per_page]
+  page = Integer(params[:page]) rescue 0
+  per_page = Integer(params[:per_page]) rescue 20
+  num_users = @handler_result.outputs[:total_count] || 0
   pages = (num_users * 1.0 / per_page).ceil 
 %>
 
@@ -24,7 +24,7 @@
     <% linked_page_numbers.each do |lpn| %>
       <%= link_to_unless lpn == page + 1,
                          lpn, 
-                         admin_users_path(search: {terms: @handler_result.outputs[:query], page: lpn-1, per_page: per_page}), remote: true %>
+                         admin_users_path(search: {query: @handler_result.outputs[:query], page: lpn-1, per_page: per_page}), remote: true %>
     <% end %>
   <% end %>
 </div>
