Link to exercises js and stylesheets only on /exercises path; added links to the /exercises path

--- a/app/views/layouts/_application_header.html.erb
+++ b/app/views/layouts/_application_header.html.erb
@@ -24,14 +24,14 @@
             <%= render 'layouts/application_top_nav_link', 
                        target_text:            'WRITE A NEW EXERCISE',
                        target_id:              'top-nav-exercises-new-link',
-                       target_path:            '',
+                       target_path:            'exercises',
                        target_current_symbol:  :top_nav_exercises_new_current %>
           </li>
           <li>
             <%= render 'layouts/application_top_nav_link', 
                        target_text:            'FIND EXERCISES',
                        target_id:              'top-nav-exercises-link',
-                       target_path:            '',
+                       target_path:            'exercises',
                        target_current_symbol:  :top_nav_exercises_current %>
           </li>
           <li>
