--- a/lib/generators/secrets/templates/secrets.yml.erb
+++ b/lib/generators/secrets/templates/secrets.yml.erb
@@ -14,14 +14,33 @@ development:
   secret_key_base: <%= SecureRandom.hex(64) %>
   openstax_application_id: ~
   openstax_application_secret: ~
+  openstax_accounts_url: http://localhost:2999
+  exception_recipients: ~
+  mail_site_url: ~
+  aws_ses_access_key_id: ~
+  aws_ses_secret_access_key: ~
+  aws_ses_endpoint_server: ~
+
 
 test:
   secret_key_base: <%= SecureRandom.hex(64) %>
   openstax_application_id: ~
   openstax_application_secret: ~
+  openstax_accounts_url: http://localhost:2999
+  exception_recipients: ~
+  mail_site_url: ~
+  aws_ses_access_key_id: ~
+  aws_ses_secret_access_key: ~
+  aws_ses_endpoint_server: ~
 
 # Do not keep production secrets in the repository.
 production:
   secret_key_base: <%= SecureRandom.hex(64) %>
   openstax_application_id: ~
   openstax_application_secret: ~
+  openstax_accounts_url: ~
+  exception_recipients: ~
+  mail_site_url: ~
+  aws_ses_access_key_id: ~
+  aws_ses_secret_access_key: ~
+  aws_ses_endpoint_server: ~
