--- a/app/views/layouts/webview.html.erb
+++ b/app/views/layouts/webview.html.erb
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title>OpenStax Exercises</title>
-  <%= yield %>
+  <link rel='stylesheet' href='<%= Rails.application.secrets[:css_url]%>' />
+  <script src="//cdn.mathjax.org/mathjax/2.5-latest/MathJax.js?config=MML_HTMLorMML"></script>
+  <script type='text/javascript' src='<%= Rails.application.secrets[:js_url]%>' defer></script>
 </head>
 <body>
+  <%= yield %>
 </body>
 </html>
