updating mathjax so that it works with exercises-js

--- a/app/views/layouts/webview.html.erb
+++ b/app/views/layouts/webview.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>OpenStax Exercises</title>
   <link rel='stylesheet' href='<%= Rails.application.secrets[:css_url]%>' />
-  <script src="//cdn.mathjax.org/mathjax/2.5-latest/MathJax.js?config=MML_HTMLorMML"></script>
+  <script src="//cdn.mathjax.org/mathjax/2.5-latest/MathJax.js?config=TeX-MML-AM_HTMLorMML-full&amp;delayStartupUntil=configured" async=""></script>
   <script type='text/javascript' src='<%= Rails.application.secrets[:js_url]%>' defer></script>
   <%= csrf_meta_tags %>
 </head>
