--- a/app/views/static_pages/developers.html.erb
+++ b/app/views/static_pages/developers.html.erb
@@ -2,15 +2,6 @@
 
 <h4>Code against our API</h4>
 
-<p>Our API is cool Sed ut perspiciatis unde omnis iste natus error sit 
-   voluptatem accusantium doloremque laudantium, totam rem aperiam, 
-   eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae 
-   vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas 
-   exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea 
-   commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea 
-   voluptate velit esse quam nihil molestiae consequatur, vel illum qui 
-   dolorem eum fugiat quo voluptas nulla pariatur?</p>
+<p>Coming soon</p>
 
 <br>
-
-<%= render partial: 'api' %>
