Added link from admin/dev console to Applications page; Redirect anonymous user to login instead of blowing up on Applications page

--- a/app/views/admin/console/_manage.html.erb
+++ b/app/views/admin/console/_manage.html.erb
@@ -5,8 +5,8 @@
 
   <br><br>
 
-  <li><%= link_to "Trusted Applications",
-                  admin_trusted_applications_url %></li>
+  <li><%= link_to "Applications", oauth_applications_url %></li>
+  <li><%= link_to "Trusted Applications", admin_trusted_applications_url %></li>
 
   <br><br>
 
