--- a/app/views/doorkeeper/applications/index.html.erb
+++ b/app/views/doorkeeper/applications/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Your applications</h1>
 </div>
 
-<% if current_user.administrator %>
+<% if current_user.is_administrator? %>
   <p><%= link_to 'New Application', new_oauth_application_path, class: 'btn btn-success' %></p>
 <% end %>
 
