home page cleanup

--- a/app/views/layouts/_application_bottom_nav.html.erb
+++ b/app/views/layouts/_application_bottom_nav.html.erb
@@ -2,7 +2,7 @@
   <div id="bottom-nav-content">
 
     <div id="bottom-nav-links">
-
+<% if false %>
       <%= link_to "Terms of Use", main_app.terms_path %>
       <%= image_tag "links_dash.png" %>
 
@@ -11,15 +11,15 @@
 
       <%= link_to "Publishing Agreement", main_app.publishing_path %>
       <%= image_tag "links_dash.png" %>
-      
+
       <%= link_to "About", main_app.about_path %>
       <%= image_tag "links_dash.png" %>
 
       <%= link_to "Developers", main_app.developers_path %>
-      <%= image_tag "links_dash.png" %>      
+      <%= image_tag "links_dash.png" %>
 
       <%= link_to "Contact Us", main_app.contact_path %>
-
+<% end %>
     </div>
 
   </div>
