--- a/app/views/layouts/webview.html.erb
+++ b/app/views/layouts/webview.html.erb
@@ -6,6 +6,7 @@
   <script src="//cdn.mathjax.org/mathjax/2.6-latest/MathJax.js?config=TeX-MML-AM_HTMLorMML-full&amp;delayStartupUntil=configured" async=""></script>
   <script type='text/javascript' src='<%= Rails.application.secrets[:js_url]%>' defer></script>
   <%= csrf_meta_tags %>
+  <script id="exercises-boostrap-data" type="application/json"><%=raw json_escape client_bootstrap_data.to_json %></script>
 </head>
 <body>
   <%= yield %>
