--- a/app/views/layouts/_application_header.html.erb
+++ b/app/views/layouts/_application_header.html.erb
@@ -1,4 +1,4 @@
-<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public 
+<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public
     License version 3 or later.  See the COPYRIGHT file for details. %>
 
 <div id="application-header">
@@ -7,7 +7,7 @@
 
   <div id="application-header-between-bars">
 
-    <%= render  :partial  => "layouts/application_account_bar", 
+    <%= render  :partial  => "layouts/application_account_bar",
                 :locals   => { :icon_color => "white" } %>
 
     <div id="application-header-logo">
@@ -21,28 +21,28 @@
       <div id="top-nav-links">
         <ul>
           <li>
-            <%= render 'layouts/application_top_nav_link', 
+            <%= render 'layouts/application_top_nav_link',
                        target_text:            'WRITE A NEW EXERCISE',
                        target_id:              'top-nav-exercises-new-link',
-                       target_path:            'exercises',
+                       target_path:            'exercises/new',
                        target_current_symbol:  :top_nav_exercises_new_current %>
           </li>
           <li>
-            <%= render 'layouts/application_top_nav_link', 
-                       target_text:            'FIND EXERCISES',
+            <%= render 'layouts/application_top_nav_link',
+                       target_text:            'SEARCH',
                        target_id:              'top-nav-exercises-link',
-                       target_path:            'exercises',
+                       target_path:            'search',
                        target_current_symbol:  :top_nav_exercises_current %>
           </li>
           <li>
-            <%= render 'layouts/application_top_nav_link', 
+            <%= render 'layouts/application_top_nav_link',
                        target_text:            'EXERCISE LISTS',
                        target_id:              'top-nav-lists-link',
                        target_path:            '',
                        target_current_symbol:  :top_nav_lists_current %>
           </li>
           <li>
-            <%= render 'layouts/application_top_nav_link', 
+            <%= render 'layouts/application_top_nav_link',
                        target_text:            'HELP',
                        target_id:              'top-nav-help-link',
                        target_path:            'help',
