Update mathjax CDN to match Tutor

--- a/app/views/layouts/webview.html.erb
+++ b/app/views/layouts/webview.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>OpenStax Exercises</title>
   <link rel='stylesheet' href='<%= Rails.application.secrets[:css_url]%>' />
-  <script src="//cdn.mathjax.org/mathjax/2.6-latest/MathJax.js?config=TeX-MML-AM_HTMLorMML-full&amp;delayStartupUntil=configured" async=""></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.6.1/MathJax.js?config=TeX-MML-AM_HTMLorMML-full&amp;delayStartupUntil=configured" async></script>
   <script id="exercises-boostrap-data" type="application/json"><%=raw json_escape client_bootstrap_data.to_json %></script>
   <script type='text/javascript' src='<%= Rails.application.secrets[:js_url]%>' defer></script>
   <%= csrf_meta_tags %>
