--- a/app/views/admin/trusted_applications/index.html.erb
+++ b/app/views/admin/trusted_applications/index.html.erb
@@ -1,6 +1,6 @@
 <h4>Trusted Applications</h4>
 <%= render partial: 'shared/applications/index',
-           locals: {applications: @trusted_applications.collect{|ta| ta.application},
+           locals: {applications: @trusted_applications.map {|ta| ta.application},
                     action_partial: 'admin/trusted_applications/destroy'} %>
 
 <br><br>
