--- a/app/views/admin/licenses/show.html.erb
+++ b/app/views/admin/licenses/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Short Name:</strong>
-  <%= @license.short_name %>
+  <strong>Title:</strong>
+  <%= @license.title %>
 </p>
 
 <p>
