--- a/app/views/admin/licenses/_actions.html.erb
+++ b/app/views/admin/licenses/_actions.html.erb
@@ -5,6 +5,6 @@
       '<span class="glyphicon glyphicon-pencil"></span>'.html_safe
     end %> |
 <%= link_to(admin_license_url(license), method: :delete,
-            data: {confirm: "Are you sure you want to delete the '#{license.short_name}' license?"}) do
+            data: {confirm: "Are you sure you want to delete the '#{license.title}' license?"}) do
       '<span class="glyphicon glyphicon-trash orange"></span>'.html_safe
     end %>
