--- a/app/views/admin/licenses/_form.html.erb
+++ b/app/views/admin/licenses/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :short_name %><br>
-    <%= f.text_field :short_name %>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
   </div>
   <div class="field">
     <%= f.label :url %><br>
