Admin controller and views for delegations

--- a/app/views/admin/console/_manage.html.erb
+++ b/app/views/admin/console/_manage.html.erb
@@ -12,4 +12,8 @@
 
   <li><%= link_to "Site Terms", fine_print.root_url %></li>
   <li><%= link_to "Content Licenses", admin_licenses_url %></li>
+
+  <br><br>
+
+  <li><%= link_to "Delegations", admin_delegations_url %></li>
 </ul>
