--- a/app/views/admin/licenses/_form.html.erb
+++ b/app/views/admin/licenses/_form.html.erb
@@ -31,11 +31,7 @@
     <%= f.label :copyright_notice %><br>
     <%= f.text_area :copyright_notice %>
   </div>
-  <div class="field">
-    <%= f.label :is_public_domain %><br>
-    <%= f.check_box :is_public_domain %>
-  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
