--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
   <head>
 
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag     "application" %>
-    <%= javascript_include_tag  "application" %>
+    <%= stylesheet_link_tag     "application", 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag  "application", 'data-turbolinks-track': 'reload' %>
 
     <% if content_for?(:stylesheet_includes) %>
       <%= yield :stylesheet_includes %>
