--- a/app/views/admin/administrators/index.js.erb
+++ b/app/views/admin/administrators/index.js.erb
@@ -1,6 +1,6 @@
 <%= unless_errors alerts_html_id: 'dialog-local-alerts' do %>
-  $("#search-results-list").html(
-    "<%= j(render(partial: 'shared/users/search_results',
-                  locals: {action_partial: 'admin/administrators/form',
-                           sign_in_as: true})) %>");
+  $("#search-results-list").html("<%= j(render partial: 'shared/users/search_results', locals: {
+    action_partial: 'admin/administrators/form',
+    sign_in_as: true
+  }) %>");
 <% end %>
