--- a/app/views/dev/users/_index.html.erb
+++ b/app/views/dev/users/_index.html.erb
@@ -46,7 +46,7 @@
     </div>
     <div class='form-group'>
       <div class='col-sm-offset-3 col-sm-9'>
-        <%= f.submit 'Create User' %>
+        <%= f.submit 'Create User', class: 'btn btn-primary' %>
       </div>
     </div>
   <% end %>
@@ -55,7 +55,7 @@
 <h5>Auto-generate Users</h5>
 <%= lev_form_for :generate, url: generate_dev_users_path, remote: true,
                  html: {id: 'generate-users-form', class: 'form-inline'} do |f| %>
-                 
+
   <div>Generate <%= f.text_field :count, style: 'width:50px' %> user(s)</div>
-  <div><%= f.submit 'Do It' %></div>
+  <div><%= f.submit 'Do It', class: 'btn btn-primary' %></div>
 <% end %>
