--- a/app/views/layouts/application_body_api_docs.html.erb
+++ b/app/views/layouts/application_body_api_docs.html.erb
@@ -1,9 +1,9 @@
-<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public 
+<%# Copyright 2011-2013 Rice University. Licensed under the Affero General Public
     License version 3 or later.  See the COPYRIGHT file for details. %>
 
 <% content_for :javascript do %>
   <script type='text/javascript'>
-    $(document).ready(function() {
+    $(document).on('turbolinks:load', function() {
       $('pre.code, pre.prettyprint').each(function(index) {
         $(this).html(Exercises.Ui.syntaxHighlight($(this).html()));
       });
@@ -21,4 +21,4 @@
 
 <% end %>
 
-<%= render :template => "layouts/application" %>
+<%= render template: "layouts/application" %>
