--- a/app/views/shared/_upper_corner_console.html.erb
+++ b/app/views/shared/_upper_corner_console.html.erb
@@ -1,7 +1,7 @@
 <div id="upper-corner-console" data-no-turbolink>
 
   <% if !Rails.env.production? %>
-    Current user: <%= current_user.username %><br/>
+    Current user: <%= current_user.name %><br/>
     <%= link_to "Dev Console", main_app.admin_path, remote: true %><br/>
   <% elsif current_user.is_administrator? %>
     <%= link_to "Admin Console", main_app.admin_path, remote: true %><br/>
